# lox-cpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
cli/: main.cpp
extra/completion/: completion.bash
extra/syntax/: lox.vim
include/lox/: literal.h  token.h  values.h
include/lox/ast/: ast.h  expr.h  stmt.h
include/lox/astprinter/: astprinter.h
include/lox/callable/: callable.h  class.h  function.h  instance.h
include/lox/callable/class/: class.h  instance.h
include/lox/callable/function/: function.h  return.h
include/lox/environment/: environment.h
include/lox/error/: error.h
include/lox/interpreter/: interpreter.h
include/lox/parser/: parser.h
include/lox/prettyprint/: prettyprint.h
include/lox/primitives/: token.h
include/lox/resolver/: resolver.h
include/lox/return.h/: return.h
include/lox/scanner/: scanner.h
interpreter/: CMakeLists.txt
src/: CMakeLists.txt  literal.cpp
src/ast/: CMakeLists.txt  ast.cpp  expr.cpp  stmt.cpp
src/astprinter/: CMakeLists.txt  astprinter.cpp
src/callable/: CMakeLists.txt  callable.cpp  class.cpp  function.cpp  instance.cpp  return.cpp
src/callable/class/: class.cpp  instance.cpp
src/callable/function/: function.cpp  return.cpp
src/environment/: CMakeLists.txt  environment.cpp
src/error/: CMakeLists.txt  error.cpp
src/interpreter/: CMakeLists.txt  interpreter.cpp
src/parser/: CMakeLists.txt  parser.cpp
src/prettyprint/: CMakeLists.txt  prettyprint.cpp
src/primitives/: literal.cpp
src/resolver/: resolver.cpp
src/scanner/: CMakeLists.txt  scanner.cpp
tests/: CMakeLists.txt  astprinter.cpp  scanner.in  scanner_test.cpp
tests/cli/: CMakeLists.txt  README.md  main.cpp
tests/unit/: CMakeLists.txt  scanner_test.cpp
